Fix background image on mobile

--- a/css/full.css
+++ b/css/full.css
@@ -11,12 +11,14 @@ body {
 
 /* Header Image Background - Change the URL below to your image path (example: ../images/background.jpg) */
 
-body {
+html {
     background: url('../imgs/buzz.png') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
-    background-size: cover;
     -o-background-size: cover;
+    background-size: cover;
+    height: 100%;
+    overflow: hidden;
 }
 
 .navbar-inverse {
